preliminary design for resume's awards section is done

--- a/Resume.html
+++ b/Resume.html
@@ -41,7 +41,7 @@
 </div>
 
 <div id="top_mobile_nav">
-    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px">
 </div>
 
 <ul id="mobile_nav">
@@ -56,25 +56,25 @@
 
 <div id="progress">
     <ul>
-        <a id = "p1">WELCOME</a>
-        <a id = "p2">SECTIONS</a>
-        <a id = "p3">EDUCATION</a>
-        <a id = "p4">EXPERIENCE</a>
-        <a id = "p5">SKILLS</a>
-        <a id = "p7">BACK TO TOP</a>
+        <a id="p1">WELCOME</a>
+        <a id="p2">SECTIONS</a>
+        <a id="p3">EDUCATION</a>
+        <a id="p4">EXPERIENCE</a>
+        <a id="p5">SKILLS</a>
+        <a id="p7">BACK TO TOP</a>
     </ul>
 </div>
 
-<div id ="intro">
+<div id="intro">
     <h1> Welcome to My Digital Resume</h1>
     <a href="ResumeJuly17.pdf">or visit the standard resume</a>
 </div>
 
-<div id = "quick_guide">
+<div id="quick_guide">
     <!--<h1 class="thin_title">Sections</h1>-->
     <div id="wrapper">
         <div id="col1">
-            <div id = "col1_item1">
+            <div id="col1_item1">
                 <!--<h6><a href="Bio.html">ABOUT</a></h6>-->
                 <h6 id="q4">ABOUT</h6>
             </div>
@@ -84,7 +84,7 @@
             </div>
         </div>
         <div id="col2">
-            <div id = "col2_item1">
+            <div id="col2_item1">
                 <!--<a href="#experience">EXPERIENCE</a>-->
                 <h6 id="q2">EXPERIENCE</h6>
             </div>
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div id="col3">
-            <div id = "col3_item1">
+            <div id="col3_item1">
                 <h6 id="q5">PROJECTS</h6>
             </div>
             <div id="col3_item2">
@@ -104,21 +104,25 @@
     </div>
 </div>
 
-<div id = "edu">
+<div id="edu">
     <h1>EDUCATION</h1>
     <div id="wrap">
-        <div id = "left_col">
+        <div id="left_col">
             <!--<img src="images/rpilogo.jpg" width="400px" height="400px">-->
             <h2>RENSSELAER POLYTECHNIC <br/>INSTITUTE (RPI)</h2>
             <h3>2016-2020</h3>
             <h5>B.S. Electrical Engineering & Computer Engineering </h5>
-            <h4>Recipient of the Rennselaer Leadership Award scholarship, as well as Dean's List for the freshman year. Participated in activities and societies: Photo Club, RPI TV, Rensselaer Union Student Employment, Institute of Electrical and Electronics Engineers (IEEE).</h4>
+            <h4>Recipient of the Rennselaer Leadership Award scholarship, as well as Dean's List for the freshman year.
+                Participated in activities and societies: Photo Club, RPI TV, Rensselaer Union Student Employment,
+                Institute of Electrical and Electronics Engineers (IEEE).</h4>
         </div>
-        <div id = "right_col">
+        <div id="right_col">
             <h2>NEWTOWN HIGH SCHOOL <br/> ELMHURST, NY</h2>
             <h3>2013-2016</h3>
             <h5>High School Diploma </h5>
-            <h4>Graduated within the top 3% of the graduating class; highest AP Calculus BC score of graduating class; head programmer & video editor of FIRST Robotics Team 1635 from 2013 to 2016; programmed robots which ranked number 5 out of 66 in the FRC New York City competition.</h4>
+            <h4>Graduated within the top 3% of the graduating class; highest AP Calculus BC score of graduating class;
+                head programmer & video editor of FIRST Robotics Team 1635 from 2013 to 2016; programmed robots which
+                ranked number 5 out of 66 in the FRC New York City competition.</h4>
             <!--<img src="images/rpilogo.jpg" width="400px" height="400px">-->
         </div>
     </div>
@@ -131,26 +135,35 @@
             <div id="ex1">
                 <h2>HEAD PROGRAMMER & VIDEO EDITOR </h2>
                 <h3>2013-2016, FIRST ROBOTICS TEAM 1635</h3>
-                <h4>•	Developed a Java algorithm to ensure the robot will drive straight even if it’s made off-course by external forces. It is achieved using an onboard gyroscope. (See the video below)<br/>
-                    •	Taught a group of 20 students basics of computer science.<br/>
-                    •	Utilized Java and Arduino to program WPILib – based robots. The 2016 robot ranked #5 in NYC Regional Competition.<br/>
-                    •	Studied and practiced programming techniques including variables, functions, loops, classes and basic algorithms.<br/>
-                    •	Filmed and produced professional videos documenting the building season and the competitions, receiving more than 20,000 views. Developed mastery of video editing software including Adobe Premiere Pro, Adobe After Effects as well as Adobe Audition.<br/>
-                    •	Developed strong leadership, communication and time management skills dealing with various challenges in the 6-week designing process.<br/>
-                    •	Winner of the MVP Award sponsored by FIRST.<br/></h4>
+                <h4>• Developed a Java algorithm to ensure the robot will drive straight even if it’s made off-course by
+                    external forces. It is achieved using an onboard gyroscope. (See the video below)<br/>
+                    • Taught a group of 20 students basics of computer science.<br/>
+                    • Utilized Java and Arduino to program WPILib – based robots. The 2016 robot ranked #5 in NYC
+                    Regional Competition.<br/>
+                    • Studied and practiced programming techniques including variables, functions, loops, classes and
+                    basic algorithms.<br/>
+                    • Filmed and produced professional videos documenting the building season and the competitions,
+                    receiving more than 20,000 views. Developed mastery of video editing software including Adobe
+                    Premiere Pro, Adobe After Effects as well as Adobe Audition.<br/>
+                    • Developed strong leadership, communication and time management skills dealing with various
+                    challenges in the 6-week designing process.<br/>
+                    • Winner of the MVP Award sponsored by FIRST.<br/></h4>
             </div>
             <div id="ex2">
                 <h2>ELECTRONIC MANUFACTURING & AUTOCAD INTERN </h2>
                 <h3>2016, QUADLOGICS CONTROL CORP</h3>
-                <h4>•	Drafted 10+ AutoCAD schematics of complex electrical products to enable smooth production of electronics.<br/>
-                    •	Verified 200+ service statuses of electrical products using TeraTerm in order to increase the satisfactionrating of the company.<br/>
-                    •	Assisted with electronic manufacturing processes such as soldering.<br/></h4>
+                <h4>• Drafted 10+ AutoCAD schematics of complex electrical products to enable smooth production of
+                    electronics.<br/>
+                    • Verified 200+ service statuses of electrical products using TeraTerm in order to increase the
+                    satisfactionrating of the company.<br/>
+                    • Assisted with electronic manufacturing processes such as soldering.<br/></h4>
             </div>
             <div id="ex3">
                 <h2>GRAPHIC DESIGNER & WEB DESIGNER</h2>
                 <H3>2017-PRESENT, RENSSELAER UNION</H3>
-                <h4>•	Apply graphic design skills in creating logos, posters, brochures, and other designs using Adobe Illustrator, Adobe InDesign and Adobe Photoshop.<br/>
-                    •	Maintain RPI Union Websites using Drupal.</h4>
+                <h4>• Apply graphic design skills in creating logos, posters, brochures, and other designs using Adobe
+                    Illustrator, Adobe InDesign and Adobe Photoshop.<br/>
+                    • Maintain RPI Union Websites using Drupal.</h4>
             </div>
         </div>
     </div>
@@ -162,26 +175,77 @@
     </div>
     <!--Slider created with bxSlider. To change the styles, modify source css file of bxSlider-->
     <div id="skl_wrapper">
-        <div id = "left_arrow">
+        <div id="left_arrow">
             <img src="Images/arrow_l2.png">
         </div>
         <div id="skill_slider">
             <ul class="bxslider">
-                <li><img src="Images/skl1.png" /></li>
-                <li><img src="Images/skl2.png" /></li>
-                <li><img src="Images/skl3x.png" /></li>
-                <li><img src="Images/skl4.png" /></li>
-                <li><img src="Images/skl5.png" /></li>
-                <li><img src="Images/skl6.png" /></li>
-                <li><img src="Images/skl7.png" /></li>
+                <li><img src="Images/skl1.png"/></li>
+                <li><img src="Images/skl2.png"/></li>
+                <li><img src="Images/skl3x.png"/></li>
+                <li><img src="Images/skl4.png"/></li>
+                <li><img src="Images/skl5.png"/></li>
+                <li><img src="Images/skl6.png"/></li>
+                <li><img src="Images/skl7.png"/></li>
             </ul>
         </div>
-        <div id = "right_arrow">
+        <div id="right_arrow">
             <img src="Images/arrow_r2.png">
         </div>
     </div>
 
 </div>
+
+<div id="gradient_break">
+    <!--insert the graident break here-->
+</div>
+
+<div id="awards">
+    <div id="award_intro">
+        <div id="aw1">
+            <h1>AWARDS</h1>
+        </div>
+    </div>
+
+    <div id="multiple_awards_wrap">
+        <div id="awards1" class="awards_styles" style="margin-top: 2%">
+            <img src="Images/rpi_seal.jpg">
+            <div>
+                <h1> Dean's List & <br>Rensselaer Leadership Award</h1>
+                <h2> 2016-2017</h2>
+                <p> Awarded the Dean's List recognition for have a gpa that's greater than 3.0, as well as
+                    Rensselaer Leadership Award as a prestigious scholarship for high-achieving students.
+                </p>
+            </div>
+        </div>
+
+        <div class="awards_styles" style="margin-top: 3%">
+            <img src="Images/arts_connection.png">
+            <div>
+                <h1> Winner of NYC Arts Contest</h1>
+                <h2> May 2016</h2>
+                <p> Winner of the ArtsConnection "Viewpoints, Stories and Connections II" award.
+                    <span style="text-decoration: underline"> the winning artwork is one of the 11 pieces selected
+                        from over 2000 submissions throughout New York City.
+                    </span>
+                </p>
+            </div>
+        </div>
+
+        <div class="awards_styles" style="margin-top: 3%">
+            <img src="Images/stronghold.jpg">
+            <div>
+                <h1> Winner of FRC Long Island MVP Award</h1>
+                <h2> April 2016 </h2>
+                <p>  Selected as the recipient of this unique award for my contribution towards robotics during the
+                    2015-2016 contest season. <br><a href="proj_frc.html">See More</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 
 <div id="footer" class="_center">
     <h4> &copy; JING WEI LI 2017</h4>
