Resume Awards is Now Responsive; Animation Pending

--- a/Resume.html
+++ b/Resume.html
@@ -61,6 +61,7 @@
         <a id="p3">EDUCATION</a>
         <a id="p4">EXPERIENCE</a>
         <a id="p5">SKILLS</a>
+        <a id="p6">AWARDS</a>
         <a id="p7">BACK TO TOP</a>
     </ul>
 </div>
@@ -196,54 +197,56 @@
 
 </div>
 
-<div id="gradient_break">
-    <!--insert the graident break here-->
-</div>
-
-<div id="awards">
-    <div id="award_intro">
-        <div id="aw1">
-            <h1>AWARDS</h1>
-        </div>
+<div id="awards_wrapper">
+    <div id="gradient_break">
+        <!--insert the graident break here-->
     </div>
 
-    <div id="multiple_awards_wrap">
-        <div id="awards1" class="awards_styles" style="margin-top: 2%">
-            <img src="Images/rpi_seal.jpg">
-            <div>
-                <h1> Dean's List & <br>Rensselaer Leadership Award</h1>
-                <h2> 2016-2017</h2>
-                <p> Awarded the Dean's List recognition for have a gpa that's greater than 3.0, as well as
-                    Rensselaer Leadership Award as a prestigious scholarship for high-achieving students.
-                </p>
+    <div id="awards">
+        <div id="award_intro">
+            <div id="aw1">
+                <h1>AWARDS</h1>
             </div>
         </div>
 
-        <div class="awards_styles" style="margin-top: 3%">
-            <img src="Images/arts_connection.png">
-            <div>
-                <h1> Winner of NYC Arts Contest</h1>
-                <h2> May 2016</h2>
-                <p> Winner of the ArtsConnection "Viewpoints, Stories and Connections II" award.
-                    <span style="text-decoration: underline"> the winning artwork is one of the 11 pieces selected
-                        from over 2000 submissions throughout New York City.
+        <div id="multiple_awards_wrap">
+            <div id="awards1" class="awards_styles" style="margin-top: 2%">
+                <img src="Images/rpi_seal.jpg">
+                <div>
+                    <h1> Dean's List & Rensselaer Leadership Award</h1>
+                    <h2> 2016-2017</h2>
+                    <p> Awarded the Dean's List recognition for have a gpa that's greater than 3.0, as well as
+                        Rensselaer Leadership Award as a prestigious scholarship for high-achieving students.
+                    </p>
+                </div>
+            </div>
+
+            <div class="awards_styles" style="margin-top: 3%">
+                <img src="Images/arts_connection.png">
+                <div>
+                    <h1> Winner of NYC Arts Contest</h1>
+                    <h2> May 2016</h2>
+                    <p> Winner of the ArtsConnection "Viewpoints, Stories and Connections II" award.
+                        <span style="text-decoration: underline"> the winning artwork is one of the 11 pieces selected
+                        from over 2000 submissions from New York City.
                     </span>
-                </p>
+                    </p>
+                </div>
+            </div>
+
+            <div class="awards_styles" style="margin-top: 3%">
+                <img src="Images/stronghold.jpg">
+                <div>
+                    <h1> Winner of FRC Long Island MVP Award</h1>
+                    <h2> April 2016 </h2>
+                    <p>  Selected as the recipient of this unique award for my contribution towards robotics during the
+                        2015-2016 contest season. <br><a href="proj_frc.html">See More</a>
+                    </p>
+                </div>
             </div>
         </div>
 
-        <div class="awards_styles" style="margin-top: 3%">
-            <img src="Images/stronghold.jpg">
-            <div>
-                <h1> Winner of FRC Long Island MVP Award</h1>
-                <h2> April 2016 </h2>
-                <p>  Selected as the recipient of this unique award for my contribution towards robotics during the
-                    2015-2016 contest season. <br><a href="proj_frc.html">See More</a>
-                </p>
-            </div>
-        </div>
     </div>
-
 </div>
 
 
