--- a/Resume.html
+++ b/Resume.html
@@ -210,7 +210,7 @@
         </div>
 
         <div id="multiple_awards_wrap">
-            <div id="awards1" class="awards_styles" style="margin-top: 2%">
+            <div id="awards1" class="awards_styles">
                 <img src="Images/rpi_seal.jpg">
                 <div>
                     <h1> Dean's List & Rensselaer Leadership Award</h1>
@@ -221,7 +221,7 @@
                 </div>
             </div>
 
-            <div class="awards_styles" style="margin-top: 3%">
+            <div id="awards2" class="awards_styles">
                 <img src="Images/arts_connection.png">
                 <div>
                     <h1> Winner of NYC Arts Contest</h1>
@@ -234,7 +234,7 @@
                 </div>
             </div>
 
-            <div class="awards_styles" style="margin-top: 3%">
+            <div  id="awards3" class="awards_styles">
                 <img src="Images/stronghold.jpg">
                 <div>
                     <h1> Winner of FRC Long Island MVP Award</h1>
