Pro Footer Now Working in Index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <div id="top_mobile_nav">
-    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px">
 </div>
 
 <ul id="mobile_nav">
@@ -105,10 +105,51 @@
     </div>
 </div>
 
+<div id="footer_container">
 
-<div id="footer" class="_center">
-    <h4> &copy; JING WEI LI 2017. Proudly Created from Scratch</h4>
+    <div id="footerx">
+        <div id="personal_logo">
+            <img style="margin-top: 18px" src="Images/PersonalLogo.png">
+        </div>
+        <div id="navigation">
+            <ul>
+                <li><h4>NAVIGATION</h4></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Bio.html">About</a></li>
+                <li><a href="Resume.html">Resume</a></li>
+                <li><a href="Graphic%20Design.html">Graphic Design </a></li>
+                <li><a href="Games.html">Games</a></li>
+                <li><a href="Contacts.html">Contact Me</a></li>
+            </ul>
+        </div>
+        <div id="projects_footer">
+            <ul>
+                <li><h4>PROJECTS</h4></li>
+                <li><a href="Projects.html">All</a></li>
+                <li><a href="Games.html">2048</a></li>
+                <li><a href="proj_frc.html">FIRST Robotics</a></li>
+                <li><a href="index.html">Personal Website</a></li>
+            </ul>
+        </div>
+        <div id="social_media_footer">
+            <ul>
+                <li><h4>LINKS</h4></li>
+                <li><a href="https://www.facebook.com/li.jingwei.94">Facebook</a></li>
+                <li><a href="https://www.instagram.com/ljw980105">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/jingweili2/">LinkedIn</a></li>
+                <li><a href="https://twitter.com/MrProLi">Twitter</a></li>
+                <li><a href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng">Youtube</a></li>
+                <li><a href="https://github.com/ljw980105/">GitHub</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="mobile_logo">
+        <img src="Images/PersonalLogo.png">
+    </div>
+    <h4 id="standalone_footer" style="text-align: center"> &copy; JING WEI LI 2017. Proudly Created from Scratch</h4>
 </div>
+
 
 </body>
 </html>
