Footer Added across Site

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div id="navigation">
             <ul>
-                <li><h4>NAVIGATION</h4></li>
+                <li><h4>PAGES</h4></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Bio.html">About</a></li>
                 <li><a href="Resume.html">Resume</a></li>
@@ -147,9 +147,9 @@
     <div id="mobile_logo">
         <img src="Images/PersonalLogo.png">
     </div>
+
     <h4 id="standalone_footer" style="text-align: center"> &copy; JING WEI LI 2017. Proudly Created from Scratch</h4>
 </div>
-
 
 </body>
 </html>
