Added Separate Footer CSS Files and Added Border Top

--- a/Games.html
+++ b/Games.html
@@ -11,6 +11,7 @@
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <link href="CSS/game_css.css" rel="stylesheet" type="text/css" media="screen">
     <link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/footer_dark.css" rel="stylesheet" type="text/css" media="screen">
 
     <!--REACT JS LIBRARIES-->
     <script src="JS/react.js"></script>
