--- a/Resume.html
+++ b/Resume.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/footer_dark.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
     <script src="JS/resume_js.js"></script>
