--- a/proj_frc.html
+++ b/proj_frc.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/footer_dark.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/frc_js.js"></script>
     <script src="JS/common_jquery.js"></script>
@@ -97,7 +98,7 @@
 
 
 <div id="footer" class="_center">
-    <div id="footer_container">
+    <div id="footer_container2">
         <h2> Give FRC Team 1635 Some Support By Visiting Their Website!</h2>
         <a href="http://team1635.org/" target="_blank">Visit the Website</a>
         <h4></h4>
