NMN Added to Resume

--- a/Resume.html
+++ b/Resume.html
@@ -167,6 +167,15 @@
                     Illustrator, Adobe InDesign and Adobe Photoshop.<br/>
                     • Maintain RPI Union Websites using Drupal.</h4>
             </div>
+            <div id="ex4">
+                <h2>BILINGUAL CUSTOMER SERVICE REPRESENTATIVE</h2>
+                <h3>SUMMER 2017, NATIONAL MEDTRANS NETWORK</h3>
+                <h4>
+                    • Assist customers with their inquiries, resolve complaints, and settle grievances.
+                    • Schedule transportation for patients in order to get them to the medical facilities safely.
+                    • Gained exceptional communications skills as well as experiences in the service industry.
+                </h4>
+            </div>
         </div>
     </div>
 </div>
