--- a/Resume.html
+++ b/Resume.html
@@ -171,8 +171,8 @@
                 <h2>BILINGUAL CUSTOMER SERVICE REPRESENTATIVE</h2>
                 <h3>SUMMER 2017, NATIONAL MEDTRANS NETWORK</h3>
                 <h4>
-                    • Assist customers with their inquiries, resolve complaints, and settle grievances.
-                    • Schedule transportation for patients in order to get them to the medical facilities safely.
+                    • Assist customers with their inquiries, resolve complaints, and settle grievances.<br/>
+                    • Schedule transportation for patients in order to get them to the medical facilities safely.<br/>
                     • Gained exceptional communications skills as well as experiences in the service industry.
                 </h4>
             </div>
