Graphic Now Uses Common White CSS; Added Separate Page for Reg Art

--- a/Regular_Art.html
+++ b/Regular_Art.html
@@ -1,21 +1,20 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
-    <link href="CSS/common_white.css" rel="stylesheet" type="text/css" media="screen">
     <link href="CSS/footer_dark.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
-    <script src="JS/gfx2_js.js"></script>
-    <meta charset="utf-8">
-    <title>Graphic Design</title>
+    <script src="JS/common_art_js.js" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <title>Regular Art</title>
     <link rel="icon" href="Images/icon png.png">
-    <link href="CSS/gfx2.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/common_arts.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/common_white.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
-<body>
-
+<body id="bod">
 <div id="nav" class="menu-wrap">
     <nav class="menu">
         <ul class="clearfix">
@@ -38,7 +37,7 @@
 </div>
 
 <div id="top_mobile_nav">
-    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px">
 </div>
 
 <ul id="mobile_nav">
@@ -51,59 +50,24 @@
     <a id="nav_last" href="Contacts.html">CONTACT</a>
 </ul>
 
-<div id="showcase"></div>
-
-<div id="work">
-    <h1> Works</h1>
+<div id="reg_showcase">
+    <!--insert background image-->
 </div>
 
-<div id="design">
-
-    <div id="behance_mobile">
-        <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
-    </div>
-    <div id="flickr_mobile">
-        <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
-    </div>
-
-    <div id="col1">
-        <div id="img1" class="imgContainer">
-            <img src="Images/graphics1.jpg">
-            <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project <br /> 2026 Time Capsule</a>
-        </div>
-
-        <div id="img4" class="imgContainer">
-            <img src="Images/graphics3.jpg">
-            <a class="shadow" href="https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster">Robotics Poster</a>
-        </div>
-    </div>
-    <div id="col2">
-        <div id="img2" class="imgContainer">
-            <img src="Images/graphics2.jpg">
-            <a class="shadow" href=Regular_Art.html>Regular Art</a>
-        </div>
-
-        <div id="behance">
-            <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
-        </div>
-    </div>
-    <div id="col3">
-        <div id="img3" class="imgContainer">
-            <img src="Images/gfx2.png">
-            <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class <br /> Stickers</a>
-        </div>
-
-        <div id="flickr">
-            <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
-        </div>
-    </div>
-
+<div id="contents">
+    <h1>Regular Arts</h1>
+    <img id="img1" src="Images/graphics2.jpg">
+    <h1>The Amazing Einstein Sketch</h1>
+    <img id="img2" src="Images/yearbook_artwork.jpg">
+    <h1>In My YearBook</h1>
+    <img id="img3" src="Images/math_artwork.jpg">
+    <h1>The Artwork That Won the ArtsConnection Award</h1>
+    <img id="img4" src="Images/artsconn.jpg">
+    <h1>Because It Highlights the Importance of Math.</h1>
+    <h2>Thanks for Viewing!</h2>
 
 </div>
 
-<!--<div id="footer" class="_center">-->
-    <!--<h4> &copy; JING WEI LI 2017</h4>-->
-<!--</div>-->
 <div id="footer_container">
 
     <div id="footerx">
@@ -146,6 +110,7 @@
     <div id="mobile_logo">
         <img src="Images/PersonalLogo.png">
     </div>
+
     <h4 id="standalone_footer" style="text-align: center"> &copy; JING WEI LI 2017. Proudly Created from Scratch</h4>
 </div>
 
