Added RegArt to Awards

--- a/Resume.html
+++ b/Resume.html
@@ -237,8 +237,8 @@
                     <h1> Winner of NYC Arts Contest</h1>
                     <h2> May 2016</h2>
                     <p> Winner of the ArtsConnection "Viewpoints, Stories and Connections II" award.
-                        <span style="text-decoration: underline"> the winning artwork is one of the 11 pieces selected
-                        from over 2000 submissions from New York City.
+                        <span style="text-decoration: underline"> The winning artwork is one of the 11 pieces selected
+                            from over 2000 submissions from New York City. <br/><a href="Regular_Art.html">See More</a>
                     </span>
                     </p>
                 </div>
